--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.511.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
+    "nodemon": "^3.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.7",
