--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "engine": {
+    "node": ">=14.16.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
