--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=14.16.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,9 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,7 +33,9 @@
     "react-hook-form": "^7.56.4",
     "sequelize": "^6.37.7",
     "tailwind-merge": "^3.3.0",
+    
     "zod": "^3.25.13"
+    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
