--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=14.16.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -29,6 +33,7 @@
     "sequelize": "^6.37.7",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.13"
+    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
