--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -34,7 +38,6 @@
     "sequelize": "^6.37.7",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.13"
-    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
